# Game-Of-Life

./: CMakeLists.txt  Config.hpp  GenerationManager.cpp  GenerationManager.hpp  README.txt  Renderer.cpp  Renderer.hpp  RendererSFML.cpp  RendererSFML.hpp  RendererTerminal.cpp  RendererTerminal.hpp  main.cpp
Seeds/Graphical/: AcornSeed.txt  BeaconSeed.txt  DieHardSeed.txt  GliderSeed.txt  GosperGliderSeed.txt  LWSSSeed.txt  PulsarSeed.txt  RPentominoSeed.txt  ToadSeed.txt
